resources/sass/object/component/_form.scss
.c-form {
  &__wrapper {
    max-width: 600px;
    margin-left: auto;
    margin-right: auto;
    padding-top: $space--xxxl;
    padding-bottom: $space--xxxl;
    background: $bg-color--white;
    border-radius: 4px;
    @include mq(){
      padding-left: $space--xl;
      padding-right: $space--xl;
    }
  }
  &--large {
    width: 80%;
    text-align: left;
    margin-left: auto;
    margin-right: auto;
    box-sizing: border-box;
    // スマホサイトは横幅いっぱい
    @include mq() {
      width: 100%;
    }
  }
  &--small {
    // PCサイトは幅40％
    width: 60%;
    text-align: left;
    margin-left: auto;
    margin-right: auto;
    box-sizing: border-box;
    // タブレットサイトは幅60％
    @include mq(medium) {
      width: 80%;
    }
    // スマホサイトは横幅いっぱい
    @include mq() {
      width: 100%;
    }
  }
  &__text {
    text-align: left;
    line-height: 1.8;
    margin-bottom: $space--xxl;
  }
  &__label {
    color: $font-color--dark;
    display: inline-block;
    font-weight: bold;
    &--required {
      background: $bg-color--danger;
      color: $font-color--white;
      font-size: $font-size--s;
      font-weight: bold;
      border-radius: 4px;
      padding: 2px $space--s;
      margin-left: $space--m;
    }
  }
  &__notes {
    color: $font-color--muted;
    font-size: $font-size--m;
    font-weight: normal;
    margin-left: $space--m;
  }
  &__info {
    color: $font-color--muted;
    font-size: $font-size--m;
    font-weight: normal;
    margin-bottom: $space--xl;
    text-align: center;
  }
  &__group {
    margin-bottom: $space--xxl;
    font-weight: normal;
  }
  &__button {
    text-align: center;
  }
  &__link {
    margin-top: $space--xxl;
    text-align: center;
    color: $font-color--muted;
    font-size: $font-size--m;
  }
  &__confirm-text {
    color: $font-color--default;
    padding: $space--l;
    margin: $space--l 0;
    background: $bg-color--light;
    border-radius: 4px;
  }
}

